Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36757

Handshake fails with Chrome as client

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.3.0
    • WebSockets
    • None
    • Google Chrome 32.0.1700.107 m
      Safari 7.0.1 (9537.73.11)
      Firefox 26.0
    • ab9c90681aaa0950fb54e6dcf67f94f789d7162d

      It seems like QWebSocketHandshakeRequest::readHandshake() fails if cant read the whole GET http request right now.
      When I'm using Chrome as client I see that first textStream.readLine()in QWebSocketHandshakeRequest::readHandshake() returns only "G" instead of full http request so function returns false.
      If insert line:
      if (pTcpSocket->bytesAvailable() < 150) return;
      into the slot QWebSocketServerPrivate::handshakeReceived() before disconnect from QTcpSocket::readyRead() then connection was successfull.

        For Gerrit Dashboard: QTBUG-36757
        # Subject Branch Project Status CR V

            kurt.pattyn Kurt Pattyn
            hungrylion Lev Golod
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes